# philips-sicp-client

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  sicp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  command_support.yml  docs.yml
.github/workflows/: ci.yml
docs/: Philips_SICP_Commands.md  Philips_SICP_Python_Client_Development.md  index.md
docs/commands/: 01-communication-control.md  02-sicp-version-and-platform-information.md  03-model-number-firmware-version-build-date.md  04-power-state.md  05-lock-functions-for-ir-remote-control-and-keypad.md  06-power-state-at-cold-start.md  07-input-sources.md  08-auto-signal-detecting-failover.md  09-monitor-restart.md  10-backlight-on-off.md  11-video-parameters.md  12-picture-format.md  13-vga-video-parameters.md  14-picture-in-picture-pip.md  15-volume.md  16-operating-hours.md  17-power-saving-mode.md  18-auto-adjust.md  19-temperature-sensors.md  20-serial-code.md  21-tiling.md  22-anytile-canvas.md  23-light-sensor.md  24-human-sensor.md  25-osd-rotating.md  26-display-orientation.md  27-information-osd.md  28-memc-effect.md  29-touch-feature.md  30-noise-reduction.md  31-scan-mode.md  32-scan-conversion.md  33-switch-on-delay-tiling.md  34-factory-reset.md  35-power-on-logo.md  36-fan-speed.md  37-apm-status-advanced-power-management.md  38-power-saving-mode-status.md  39-pixel-shift.md  40-off-timer.md  (+15 more)
philips_sicp/: __init__.py  cli.py  client.py  protocol.py
tests/: test_cli.py  test_protocol.py
